# media-tracker

./: LICENSE  README.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: app.css  main.js
frontend/src/components/: Analytics.svelte  MediaForm.svelte  MediaList.svelte
frontend/src/routes/: index.svelte
media-tracker-backend/: pyproject.toml
media-tracker-backend/media_tracker_backend/: crud.py  database.py  main.py  media_tracker.db  models.py  schemas.py
